Fixed social icons spacing

--- a/css/main.css
+++ b/css/main.css
@@ -388,7 +388,7 @@ footer .social-icons {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 8.5em;
+  
 }
 
 footer .social-icons p {
